--- a/templates/excursions/hero-header.html
+++ b/templates/excursions/hero-header.html
@@ -4,5 +4,5 @@
         <h1 class="header-title">Punta Cana Excursions</h1>
         <p class="header-subtitle">Explore the best tours and adventures in the Dominican Republic</p>
     </div>
-    <img src="{% static 'images/hero-images/macao-beach.jpg'%}" alt="Beautiful beach in Punta Cana" class="header-image">
+    <img src="{% static 'images/hero-images/macao-beach.jpg' %}" alt="Beautiful beach in Punta Cana" class="header-image" loading="eager">
 </header>
