--- a/templates/excursions/excursion_details.html
+++ b/templates/excursions/excursion_details.html
@@ -44,7 +44,7 @@
   {% endfor %}
 </div>
 
-<header>
+<header class="detail-page-title">
   <h1><i class="fas fa-umbrella-beach"></i> {{excursions.title}}</h1>
   <p><span class="rating">⭐ {{ excursions.get_average_rating }}/5</span> |
     <a href="#reviews">{{excursion.reviews.count}} reviews</a>
