--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -1,4 +1,4 @@
-{% extends 'excursions/excursions_base.html' %}
+{% extends 'base2.html' %}
 {% load crispy_forms_filters %}
 {% load crispy_forms_tags %}
 
@@ -8,6 +8,7 @@
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
 
 {% block content %}
+
 <div class="container h-100">
   <div class="d-flex justify-content-center h-100">
     <div class="user_card">
