--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -1,8 +1,9 @@
-{% extends 'excursions/excursions_base.html' %}
+{% extends 'base2.html' %}
 {% load crispy_forms_filters %}
 {% load crispy_forms_tags %}
 {% load i18n %}
 {% load account socialaccount %}
+
 
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
