--- a/templates/excursions/add_more_photos.html
+++ b/templates/excursions/add_more_photos.html
@@ -1,4 +1,4 @@
-{% extends 'excursions/excursions_base.html' %}
+{% extends 'base2.html' %}
 {% load crispy_forms_tags %}
 {% load static %}
 {% block content %}
